outputs/ip_deit32_es_35075193.out
  File "/home/pkadukar/furi-hsi/jobs/run_deit_t32s16_weighted_es.py", line 188
    ​eval_strategy="epoch",
    ^
SyntaxError: invalid non-printable character U+200B
